browser/css/color-palette.css
:root {
	/*LibreOffice Colors: https://wiki.documentfoundation.org/Marketing/Branding#Colors
	 * this is the color prefab for light mode
	----------------------------------[to do]*/
	--blue1-txt-primary-color: 3, 105, 163;
	--green0-txt-primary-color: 16, 104, 2; /*green1 lacks contrast against white*/
	--orange1-txt-primary-color: 163, 62, 3;
	--yellow0-txt-primary-color: 135, 105, 0; /*yellow1 lacks contrast against white*/

	--color-main-text: #333333;
	--color-text-dark: #333333;  /* select */
	--color-text-darker: #000;  /* hover */
	--color-text-lighter: #696969; /* secondard text, disabled */
	--color-text-calc-header: #e8e8e8;
	--color-status-badge: #616161;
	--color-slideshow: #A8A8A8;
	--color-date-text: #555555;

	--color-main-background: #F8F9FA;
	--color-background-dark: #e8e8e8;  /* select */
	--color-background-darker: #c0bfbc;  /* todo: apply to pressed (active), li:hover(top menu on classic mode)*/
	--color-background-slideshow: #1a1a1a;
	--color-background-lighter: #fff; /* hover, toolbar, dialog, disabled */
	--color-overlay: #1c5fa814;
	--color-background-tabs-group: #f1f1f1;
	--color-stylesview-background: var(--color-background-lighter);
	--brightness-stylesview: 1;

	--color-canvas: #f0f0f0;

	--color-primary: #0b87e7; /* border-color */
	--color-primary-text: #fff; /* text color when primary-lighter is background */
	--color-primary-dark: #0063b1;
	--color-primary-darker: #004b86;
	--color-primary-lighter: #83beec; /* background-color */

	--color-border: #b6b6b6;
	--color-border-dark: #cecece; /* select */
	--color-border-darker: #c0bfbc;  /* hover */
	--color-border-dark-63: #a1a1a1;
	--color-border-lighter: #f1f1f1; /* disabled */

	--color-btn-border: #b6b6b6;
	--color-btn-border-dis: #c0bfbc;

	--color-stylesview-border: var(--color-toolbar-border);
	--color-toolbar-border: #e1dfdd;

	--color-error: #e9322d;
	--color-warning: #eca700;
	--color-success: #46ba61;

	--color-presenter-console-btn-hover: #404040;

	--color-box-shadow-light: rgba(77, 77, 77, 0.1);
	--color-box-shadow: rgba(77, 77, 77, 0.5);
	--color-hyperlink: #000080;

	--color-calc-grid: #c0c0c0;
	--color-calc-header: #f0f0f0;
	--color-calc-header-selected: #e1e1e1;
	--color-calc-header-hover: #fff;

	--color-calc-header-sheetview: #0a0a0a;
	--color-calc-header-sheetview-selected: #646464;
	--color-calc-header-sheetview-hover: #646464;
	--color-calc-header-sheetview-unsynced: #500000;

	--color-text-calc-header-selected: var(--color-text-darker);
	--color-text-calc-header-sheetview-selected: #fff;
	--color-border-calc-header: #c0c0c0;
	--color-border-calc-header-sheetview: #333;

	--color-calc-comment: #BF819E;
	--column-row-highlight: #CCFFFF;

	--color-grid-helper-line-solid: #e6e6e6;
	--color-grid-helper-line-dashed: #191919;
	--color-smart-guides-helper-line: #f36d4f;
	--color-insert-marker-background: #DDDD;
	--color-insert-marker-background-dark: #F5F5F5;

	--color-treeview-highlight: #FFEE80;
	--color-treeview-highlight-text: #222;
	--color-quickfind-border: #e1dfdd;
	--scrollbar-color: #c0bfbc transparent;
	--color-background-hover: #F5F5F5;
}

[data-bg-theme='light'] {
	--color-cursor-blink-background: #000;
	--color-background-document: #FFFFFF;
}

[data-doctype='text'] {--doc-type: 3, 105, 163;}
[data-doctype='spreadsheet'] {--doc-type: 16, 104, 2;}
[data-doctype='presentation'] {--doc-type: 163, 62, 3;}
[data-doctype='drawing'] {--doc-type: 135, 105, 0;}

