browser: a11y: fix contrast colors for input elements

--- a/browser/css/color-palette.css
+++ b/browser/css/color-palette.css
@@ -35,7 +35,7 @@
 	--color-primary-lighter: #83beec; /* background-color */
 
 	--color-border: #b6b6b6;
-	--color-border-dark: #cecece; /* select */
+	--color-border-dark: #949494; /* select */
 	--color-border-darker: #c0bfbc;  /* hover */
 	--color-border-dark-63: #a1a1a1;
 	--color-border-lighter: #f1f1f1; /* disabled */
